-m remove EF references

--- a/Mvc5CSharpRazorFx45Intranet/Views/Home/Index.cshtml
+++ b/Mvc5CSharpRazorFx45Intranet/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
     Except:
     </li>
     <li><h5>What doesn't yet work on MVC 5:</h5>
-    The HtmlHelper : if you unescape this, @@Html.ActionLink("Home", "Index", "Home") it will error with this stack trace:
+    The HtmlHelper : if you unescape this, @Html.ActionLink("Home", "Index", "Home") it will error with this stack trace:
       <h3>System.MissingMethodException</h3>
       <h4 class="exceptionMessage">Method not found: 'System.Web.Routing.RouteCollection.get_AppendTrailingSlash'.</h4>
       <p><strong>Description:</strong> HTTP 500.Error processing request.</p><p><strong>Details:</strong> Non-web exception. Exception origin (name of application or object): System.Web.Mvc.</p>
